corrected the stickler file

--- a/.sticker.yml
+++ b/.sticker.yml
@@ -2,7 +2,8 @@
 linters:
   stylelint:
     # indicate where is the config file for stylelint
-    config: 'stylelint.config.js'
+  csslint: 
+    
 
 
 # PLEASE DO NOT enable auto fixing options
